fixed footer overlapping on content

--- a/style.css
+++ b/style.css
@@ -16,10 +16,17 @@ body{
     background: #000000;
 }
 
+#page-container {
+    position: relative;
+    min-height: 100vh;
+    padding-top: 25%;
+    padding-bottom: 10%;
+}
+  
+
 .logo{
-    position:absolute;
+    position:relative;
     top: 0;
-    margin: auto;
 
 }
 
@@ -31,7 +38,7 @@ body{
     height: 105px;
     background: #1d404a;
     border-radius: 10px;
-    font-family: Helvetica;
+    font-family: 'Courier New', Courier, monospace;
     transition: 0.6s ease-out;
 }
 
@@ -53,10 +60,15 @@ body{
   filter: invert(100%) hue-rotate(180deg) brightness(100%) contrast(100%);
 }
 
+.leaflet-popup-content-wrapper, .leaflet-popup-tip {
+    background: rgb(190, 12, 12);
+    color: #7a2323;
+    box-shadow: 0 3px 14px rgba(207, 16, 16, 0.4);
+    }
 
 select[name="state"]
 {
-    font-family: monospace;
+    font-family: 'Courier New', Courier, monospace;
     text-align: center;
     background-color:#547f85;
     color: white;
@@ -70,7 +82,7 @@ select[name="state"]
 }
 
 select[name="city"] {
-    font-family: monospace;
+    font-family: 'Courier New', Courier, monospace;
     text-align: center;
     background-color:#547f85;
     color: white;
@@ -94,7 +106,7 @@ select option:disabled {
     width: 50px;
     height: 50px;
     color: #EE3E3E;
-    background: #004E58;
+    background: #1d404a;
     border-radius: 50%;
     font-size: 22px;
     transition: 0.4s ease;
@@ -212,10 +224,13 @@ footer{
     color: white;
     text-align: center; 
     bottom: 0;
-    position: fixed;
     right: 0;
     left: 0;
-    font-family:monospace
+    font-family: 'Courier New', Courier, monospace;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
 }
 
 footer a{
